[package]
name = "tester"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
zksync_consensus_tools.workspace = true

serde_json.workspace = true
tokio.workspace = true
jsonrpsee.workspace = true
clap.workspace = true
tracing.workspace = true

[lints]
workspace = true
