[package]
name = "tester"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
publish = false

[dependencies]
zksync_consensus_tools.workspace = true

serde_json.workspace = true
tokio.workspace = true
jsonrpsee.workspace = true
clap.workspace = true
tracing.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
