[package]
authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "tester"
publish              = false
repository.workspace = true
version.workspace    = true

[dependencies]
zksync_consensus_tools.workspace = true

anyhow.workspace             = true
clap.workspace               = true
jsonrpsee.workspace          = true
serde_json.workspace         = true
tokio.workspace              = true
tracing-subscriber.workspace = true
tracing.workspace            = true

[lints]
workspace = true
