[package]
name = "zksync_consensus_tools"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
default-run = "executor"

[dependencies]
zksync_concurrency.workspace = true
zksync_consensus_bft.workspace = true
zksync_consensus_crypto.workspace = true
zksync_consensus_executor.workspace = true
zksync_consensus_roles.workspace = true
zksync_consensus_storage.workspace = true
zksync_consensus_utils.workspace = true
zksync_protobuf.workspace = true

anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
prost.workspace = true
rand.workspace = true
rocksdb.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vise-exporter.workspace = true
tonic.workspace = true

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
zksync_protobuf_build.workspace = true
tonic-build.workspace = true

[lints]
workspace = true

[[bin]]
name = "executor"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/rpc/client.rs"
