[package]
authors.workspace    = true
default-run          = "executor"
description          = "ZKsync consensus tools"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "zksync_consensus_tools"
publish              = false
repository.workspace = true
version.workspace    = true

[dependencies]
zksync_concurrency.workspace        = true
zksync_consensus_crypto.workspace   = true
zksync_consensus_executor.workspace = true
zksync_consensus_network.workspace  = true
zksync_consensus_roles.workspace    = true
zksync_consensus_engine.workspace   = true
zksync_consensus_utils.workspace    = true
zksync_protobuf.workspace           = true

anyhow.workspace             = true
async-trait.workspace        = true
clap.workspace               = true
jsonrpsee.workspace          = true
prost.workspace              = true
rand.workspace               = true
rocksdb.workspace            = true
serde_json.workspace         = true
tokio.workspace              = true
tower.workspace              = true
tracing-subscriber.workspace = true
tracing.workspace            = true
vise-exporter.workspace      = true

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
zksync_protobuf_build.workspace = true

[lints]
workspace = true

[[bin]]
name = "executor"
path = "src/main.rs"
