[package]
name = "zksync_consensus_bft"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
zksync_concurrency.workspace = true
zksync_consensus_crypto.workspace = true
zksync_consensus_network.workspace = true
zksync_consensus_roles.workspace = true
zksync_consensus_storage.workspace = true
zksync_consensus_utils.workspace = true
zksync_protobuf.workspace = true

anyhow.workspace = true
once_cell.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true
vise.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true