[package]
name = "consensus"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
once_cell.workspace = true
rand.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
vise.workspace = true

protobuf.workspace = true
concurrency = { path = "../../libs/concurrency" }
crypto = { path = "../../libs/crypto" }
roles = { path = "../../libs/roles" }
schema = { path = "../../libs/schema" }
storage = { path = "../../libs/storage" }
utils = { path = "../../libs/utils" }

network = { path = "../network" }

[dev-dependencies]
tokio.workspace = true
