[package]
name = "zksync_consensus_executor"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
zksync_concurrency.workspace = true
zksync_consensus_bft.workspace = true
zksync_consensus_crypto.workspace = true
zksync_consensus_network.workspace = true
zksync_consensus_roles.workspace = true
zksync_consensus_schema.workspace = true
zksync_consensus_storage.workspace = true
zksync_consensus_sync_blocks.workspace = true
zksync_consensus_utils.workspace = true

anyhow.workspace = true
rand.workspace = true
tracing.workspace = true
vise.workspace = true

[dev-dependencies]
tokio.workspace = true
