[package]
name = "zksync_consensus_network"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
zksync_concurrency.workspace = true
zksync_consensus_crypto.workspace = true
zksync_consensus_roles.workspace = true
zksync_consensus_utils.workspace = true
zksync_protobuf.workspace = true

anyhow.workspace = true
async-trait.workspace = true
im.workspace = true
once_cell.workspace = true
pin-project.workspace = true
prost.workspace = true
rand.workspace = true
snow.workspace = true
thiserror.workspace = true
tracing.workspace = true
vise.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
test-casing.workspace = true
tokio.workspace = true

[build-dependencies]
zksync_protobuf_build.workspace = true

[lints]
workspace = true