[package]
name = "zksync_consensus_sync_blocks"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
zksync_concurrency.workspace = true
zksync_consensus_network.workspace = true
zksync_consensus_roles.workspace = true
zksync_consensus_storage.workspace = true
zksync_consensus_utils.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
assert_matches.workspace = true
async-trait.workspace = true
rand.workspace = true
test-casing.workspace = true
tokio.workspace = true
