[package]
authors.workspace    = true
description          = "ZKsync consensus BFT component"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "zksync_consensus_bft"
repository.workspace = true
version.workspace    = true

[dependencies]
zksync_concurrency.workspace       = true
zksync_consensus_crypto.workspace  = true
zksync_consensus_network.workspace = true
zksync_consensus_roles.workspace   = true
zksync_consensus_storage.workspace = true
zksync_consensus_utils.workspace   = true
zksync_protobuf.workspace          = true

anyhow.workspace      = true
async-trait.workspace = true
once_cell.workspace   = true
rand.workspace        = true
thiserror.workspace   = true
tracing.workspace     = true
vise.workspace        = true

[dev-dependencies]
assert_matches.workspace    = true
pretty_assertions.workspace = true
test-casing.workspace       = true
tokio                       = { workspace = true, features = ["full", "test-util"] }

[lints]
workspace = true
