[package]
authors.workspace    = true
description          = "ZKsync consensus network component"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "zksync_consensus_network"
repository.workspace = true
version.workspace    = true

[dependencies]
zksync_concurrency.workspace       = true
zksync_consensus_crypto.workspace  = true
zksync_consensus_roles.workspace   = true
zksync_consensus_engine.workspace  = true
zksync_consensus_utils.workspace   = true
zksync_protobuf.workspace          = true

anyhow.workspace         = true
async-trait.workspace    = true
build_html.workspace     = true
http-body-util.workspace = true
human-repr.workspace     = true
hyper-util.workspace     = true
hyper.workspace          = true
im.workspace             = true
pin-project.workspace    = true
prost.workspace          = true
rand.workspace           = true
semver.workspace         = true
snow.workspace           = true
thiserror.workspace      = true
tls-listener.workspace   = true
tokio-rustls.workspace   = true
tokio.workspace          = true
tracing.workspace        = true
vise.workspace           = true

[dev-dependencies]
assert_matches.workspace    = true
pretty_assertions.workspace = true
test-casing.workspace       = true

[build-dependencies]
zksync_protobuf_build.workspace = true

[lints]
workspace = true
