[package]
name = "zksync_concurrency"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
once_cell.workspace = true
pin-project.workspace = true
rand.workspace = true
sha3.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vise.workspace = true
tokio-rustls.workspace = true
hyper.workspace = true
http-body-util.workspace = true
hyper-util.workspace = true
tls-listener.workspace = true
rustls-pemfile.workspace = true
base64.workspace = true
build_html.workspace = true

[lints]
workspace = true

[dev-dependencies]
assert_matches.workspace = true
