[package]
name = "zksync_concurrency"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
once_cell.workspace = true
pin-project.workspace = true
rand.workspace = true
sha3.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vise.workspace = true

[lints]
workspace = true

[dev-dependencies]
assert_matches.workspace = true
