[package]
authors.workspace    = true
description          = "Structured concurrency framework"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "zksync_concurrency"
repository.workspace = true
version.workspace    = true

[dependencies]
anyhow.workspace             = true
once_cell.workspace          = true
pin-project.workspace        = true
rand.workspace               = true
sha3.workspace               = true
thiserror.workspace          = true
time.workspace               = true
tokio.workspace              = true
tracing-subscriber.workspace = true
tracing.workspace            = true
vise.workspace               = true

[lints]
workspace = true

[dev-dependencies]
assert_matches.workspace = true
