[package]
authors.workspace    = true
description          = "ZKsync consensus cryptographic utilities"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "zksync_consensus_crypto"
repository.workspace = true
version.workspace    = true

[dependencies]
anyhow.workspace         = true
blst.workspace           = true
ed25519-dalek.workspace  = true
elliptic-curve.workspace = true
hex.workspace            = true
k256.workspace           = true
rand.workspace           = true
sha3.workspace           = true
thiserror.workspace      = true
zeroize.workspace        = true

[dev-dependencies]
criterion.workspace = true

[lints]
workspace = true

[[bench]]
harness = false
name    = "bench"
