[package]
name = "zksync_protobuf"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
links = "zksync_protobuf_proto"

[dependencies]
zksync_concurrency.workspace = true
zksync_protobuf_build.workspace = true

anyhow.workspace = true
bit-vec.workspace = true
serde.workspace = true
quick-protobuf.workspace = true
once_cell.workspace = true
prost.workspace = true
prost-reflect.workspace = true
rand.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
zksync_protobuf_build.workspace = true

[lints]
workspace = true

[[bin]]
name = "conformance_test"