[package]
authors.workspace    = true
description          = "ZKsync consensus protobuf types and utilities"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
links                = "zksync_protobuf_proto"
name                 = "zksync_protobuf"
repository.workspace = true
version.workspace    = true

[dependencies]
zksync_concurrency.workspace     = true
zksync_consensus_utils.workspace = true

anyhow.workspace         = true
bit-vec.workspace        = true
once_cell.workspace      = true
prost-reflect.workspace  = true
prost.workspace          = true
quick-protobuf.workspace = true
rand.workspace           = true
serde.workspace          = true
serde_json.workspace     = true
serde_yaml.workspace     = true

[dev-dependencies]
tokio.workspace              = true
tracing-subscriber.workspace = true
tracing.workspace            = true

[build-dependencies]
zksync_protobuf_build.workspace = true

[lints]
workspace = true
