[package]
name = "zksync_protobuf_build"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
heck.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
prost-build.workspace = true
prost-reflect.workspace = true
protox.workspace = true
quote.workspace = true
syn.workspace = true

[lints]
workspace = true
